compiler-core/src/parse/snapshots/gleam_core__parse__tests__function_definition_angle_generics_error.snap
---
source: compiler-core/src/parse/tests.rs
expression: "fn id<T>(x: T) { x }"
---
----- SOURCE CODE
fn id<T>(x: T) { x }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:6
  │
1 │ fn id<T>(x: T) { x }
  │      ^ I was expecting `(` here.

If you were trying to define a generic function, Gleam does not use angle brackets.
Instead, you should write types in the parameter list with lower-case names.
Each unique lower-case name becomes a type variable:

    fn example(arg: t) -> t

See: https://tour.gleam.run/functions/generic-functions/
